disable button until required fields are met in proof of address, fix input vertical alignment for label

--- a/packages/components/src/components/input/input.scss
+++ b/packages/components/src/components/input/input.scss
@@ -34,7 +34,7 @@
             outline: none;
 
             & ~ label {
-                transform: translate(0, -1.6rem) scale(0.75);
+                transform: translate(0, -1.8rem) scale(0.75);
                 padding: 0 4px;
                 background-color: var(--fill-normal);
             }
@@ -93,7 +93,7 @@
         position: absolute;
         pointer-events: none;
         left: 1rem;
-        top: 1rem;
+        top: 1.3rem;
         transition: 0.25s ease all;
         transform-origin: top left;
     }
